Persist OAuth2 signing key across restarts (V9 migration)